# fastping-rs

./: Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: ping.rs
src/: error.rs  lib.rs  ping.rs
