[package]
name = "fastping-rs"
version = "0.1.3"
authors = ["bparli <bparli@gmail.com>"]
license = "MIT"
homepage = "https://github.com/bparli/fastping-rs"
repository = "https://github.com/bparli/fastping-rs"
description = " ICMP ping library for quickly sending and measuring batches of ICMP ECHO REQUEST packets."
readme = "README.md"

[dependencies]
pnet = "0.22.0"
pnet_macros_support = "0.22.0"
env_logger = "0.5.13"
log = "0.4.5"
rand = "0.4"
