[package]
name = "fastping-rs"
version = "0.2.2"
authors = ["bparli <bparli@gmail.com>"]
license = "MIT"
homepage = "https://github.com/bparli/fastping-rs"
repository = "https://github.com/bparli/fastping-rs"
description = " ICMP ping library for quickly sending and measuring batches of ICMP ECHO REQUEST packets."
readme = "README.md"

[dependencies]
pnet = "0.27"
pnet_macros_support = "0.27"
log = "0.4"
rand = "0.8"

[dev-dependencies]
pretty_env_logger = "0.4"

[[example]]
name = "ping"
