[package]
name = "fastping-rs"
version = "0.2.4"
authors = ["bparli <bparli@gmail.com>"]
license = "MIT"
homepage = "https://github.com/bparli/fastping-rs"
repository = "https://github.com/bparli/fastping-rs"
description = " ICMP ping library for quickly sending and measuring batches of ICMP ECHO REQUEST packets."
readme = "README.md"
edition = "2021"

[dependencies]
pnet = "0.34"
pnet_macros_support = "0.34"
log = "0.4"
rand = "0.8"

[dev-dependencies]
pretty_env_logger = "0.5"

[[example]]
name = "ping"
